[project]
name = "scribo"
version = "0.1.0"
description = ""
authors = [
    {name = "Joakim Olsson",email = "barbatron@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers (>=4.50.3,<5.0.0)",
    "accelerate (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"

